--- a/euro-bet/Views/Shared/_Layout.cshtml
+++ b/euro-bet/Views/Shared/_Layout.cshtml
@@ -166,7 +166,7 @@
                                             <a class="nav-link" href="/about">About</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="statics.html">Statics</a>
+                                            <a class="nav-link" href="/stats">Statics</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="promotions.html">Promotions</a>
