--- a/euro-bet/Views/Account/Signup.cshtml
+++ b/euro-bet/Views/Account/Signup.cshtml
@@ -46,15 +46,15 @@
                             <div class="single-form" id="first-step">
                                 <form asp-controller="Account" asp-action="Signup">
                                     <div>
-                                        <input name="firstName" type="text" value="" id="firstName" required>
+                                        <input name="firstName" type="text" value="" id="firstName" required autocomplete="off">
                                         <label for="firstName">First Name</label>
                                     </div>
                                     <div>
-                                        <input name="middleName" type="text" id="middleName" required>
+                                        <input name="middleName" type="text" id="middleName" autocomplete="off">
                                         <label for="middleName">Middle Name</label>
                                     </div>
                                     <div>
-                                        <input name="lastName" type="text" value="" id="lastName" required>
+                                        <input name="lastName" type="text" value="" id="lastName" required autocomplete="off">
                                         <label for="lastName">Last Name</label>
                                     </div>
                                     
