--- a/euro-bet/Views/Account/Signup2.cshtml
+++ b/euro-bet/Views/Account/Signup2.cshtml
@@ -56,7 +56,7 @@
                                     </div>
                                     <div>
                                         
-                                         <select name="state" id="state" class="form-control mt-5">
+                                         <select name="state" id="state" class="form-control mt-5" required>
                                             <option value="Province No. 1">Province No. 1</option>
                                             <option value="Province No. 2">Province No. 2</option>
                                             <option value="Bagmati">Bagmati</option>
@@ -69,11 +69,11 @@
                                     </div>
                                     
                                     <div>
-                                        <input name="city" type="text" id="cityName">
+                                        <input name="city" type="text" id="cityName" required>
                                         <label for="cityName">City Name</label>
                                     </div>
                                     <div>
-                                        <input name="mobile" type="text" id="mobileNumber">
+                                        <input name="phone" type="text" id="mobileNumber" required>
                                         <label for="mobileNumber">Mobile Number</label>
                                     </div>
                                     <div>
