--- a/euro-bet/Views/Account/Signup4.cshtml
+++ b/euro-bet/Views/Account/Signup4.cshtml
@@ -50,7 +50,7 @@
                                         <polyline class="path check" fill="none" stroke="#73AF55" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" points="100.2,40.2 51.5,88.8 29.8,67.5 "/>
                                     </svg>
                                     <span class="text">Signup Complete!</span>
-                                    <p>Please go to <a href="/login">login page</a>.</p>
+                                    <p>Please go to <a class="btn btn-link" href="/login">login page</a>.</p>
                                 </div>
                             </div>
                         </div>
