--- a/euro-bet/Views/Account/Signup3.cshtml
+++ b/euro-bet/Views/Account/Signup3.cshtml
@@ -43,7 +43,7 @@
                             </ul>
                         </div>
                         <div class="all-form">
-                            
+                            <p class="text-danger">@ViewBag.Error</p>
                             <div class="single-form">
                                 <form asp-action="Signup3" asp-controller="Account">
                                     <div>
