--- a/euro-bet/Views/Shared/_Layout.cshtml
+++ b/euro-bet/Views/Shared/_Layout.cshtml
@@ -10,27 +10,27 @@
     <!-- favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- bootstrap -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <!-- fontawesome icon  -->
-    <link rel="stylesheet" href="assets/css/fontawesome.min.css">
+    <link rel="stylesheet" href="/assets/css/fontawesome.min.css">
     <!-- flaticon css -->
-    <link rel="stylesheet" href="assets/fonts/flaticon.css">
+    <link rel="stylesheet" href="/assets/fonts/flaticon.css">
     <!-- animate.css -->
-    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="/assets/css/animate.css">
     <!-- Owl Carousel -->
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/assets/css/owl.carousel.min.css">
     <!-- magnific popup -->
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/odometer.min.css">
+    <link rel="stylesheet" href="/assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="/assets/css/odometer.min.css">
     <!-- stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <!-- responsive -->
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="/assets/css/responsive.css">
 </head>
 <body>
     <!-- preloader begin -->
     <div class="preloader">
-        <img src="assets/img/preloader.gif" alt="">
+        <img src="/assets/img/preloader.gif" alt="">
         <span>Euro Bet LOADING</span>
     </div>
     <!-- preloader end -->
@@ -48,7 +48,7 @@
                 </div>
                 <div class="bet-descr">
                     <span class="team-name team-name-1st">america</span>
-                    <span class="img-ic"><img src="assets/img/vs-icon.png" alt=""></span>
+                    <span class="img-ic"><img src="/assets/img/vs-icon.png" alt=""></span>
                     <span class="team-name team-name-2nd">iran</span>
                     <div class="team-score">[<span class="team-first-score">1</span>:<span class="team-second-score">1</span>] 1X2 Live Prediction</div>
                 </div>
@@ -121,10 +121,21 @@
                                    
                                     @if(User.Identity.IsAuthenticated) 
                                     {
-                                       <a class="link" href="/profile">
-                                        <svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="dolly" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="svg-inline--fa fa-dolly fa-w-18 fa-fw fa-2x"><path fill="currentColor" d="M575.6 309.8l-5.1-15.2c-1.4-4.2-5.9-6.5-10.1-5.1L526 301.1 451.5 77.9c-2.7-8.1-8.4-14.7-16-18.5-7.7-3.8-16.3-4.4-24.4-1.7L176.3 136l-18-50.7C146.9 53.3 116.7 32 82.8 32H8c-4.4 0-8 3.6-8 8v16c0 4.4 3.6 8 8 8h74.8c20.3 0 38.4 12.8 45.2 31.9l96.7 271.9c-23.3 17.2-37.2 46.5-31.4 78.9 5.6 31.3 30.4 57 61.5 63.5 51.7 10.7 97.2-28.4 97.2-78.2 0-13.1-3.4-25.2-9-36.1l227.5-76c4.2-1.4 6.5-5.9 5.1-10.1zM187 166.1l106.4-35.5 25 74.9c1.4 4.2 5.9 6.5 10.1 5.1l15.2-5.1c4.2-1.4 6.5-5.9 5.1-10.1l-25-74.9L421.2 88l74.5 223.3-174.4 58.1C307.6 358.7 290.7 352 272 352c-6.3 0-12.3.9-18.1 2.3L187 166.1zM272 480c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48z" class=""></path></svg>
-                                        PLACE Your BETS
-                                        </a>
+                                        @if(User.IsInRole("Admin"))
+                                        {
+                                            <a class="link" href="/account/users">
+                                            <i class="fa fa-users" style="color: #f81b64;"></i>
+                                            Manage Users
+                                            </a>
+                                        }
+                                        else
+                                        {
+
+                                            <a class="link" href="/account/profile">
+                                            <svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="dolly" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="svg-inline--fa fa-dolly fa-w-18 fa-fw fa-2x"><path fill="currentColor" d="M575.6 309.8l-5.1-15.2c-1.4-4.2-5.9-6.5-10.1-5.1L526 301.1 451.5 77.9c-2.7-8.1-8.4-14.7-16-18.5-7.7-3.8-16.3-4.4-24.4-1.7L176.3 136l-18-50.7C146.9 53.3 116.7 32 82.8 32H8c-4.4 0-8 3.6-8 8v16c0 4.4 3.6 8 8 8h74.8c20.3 0 38.4 12.8 45.2 31.9l96.7 271.9c-23.3 17.2-37.2 46.5-31.4 78.9 5.6 31.3 30.4 57 61.5 63.5 51.7 10.7 97.2-28.4 97.2-78.2 0-13.1-3.4-25.2-9-36.1l227.5-76c4.2-1.4 6.5-5.9 5.1-10.1zM187 166.1l106.4-35.5 25 74.9c1.4 4.2 5.9 6.5 10.1 5.1l15.2-5.1c4.2-1.4 6.5-5.9 5.1-10.1l-25-74.9L421.2 88l74.5 223.3-174.4 58.1C307.6 358.7 290.7 352 272 352c-6.3 0-12.3.9-18.1 2.3L187 166.1zM272 480c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48z" class=""></path></svg>
+                                            PLACE Your BETS
+                                            </a>
+                                        }
                                     }
                                     else
                                     {
@@ -137,14 +148,14 @@
                                 <li>
                                     @if(User.Identity.IsAuthenticated) 
                                     {
-                                       <a class="link" href="/profile">
+                                       <a class="link" href="/account/profile">
                                         <svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="user-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" class="svg-inline--fa fa-user-circle fa-w-16 fa-fw fa-2x"><path fill="currentColor" d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm128 421.6c-35.9 26.5-80.1 42.4-128 42.4s-92.1-15.9-128-42.4V416c0-35.3 28.7-64 64-64 11.1 0 27.5 11.4 64 11.4 36.6 0 52.8-11.4 64-11.4 35.3 0 64 28.7 64 64v13.6zm30.6-27.5c-6.8-46.4-46.3-82.1-94.6-82.1-20.5 0-30.4 11.4-64 11.4S204.6 320 184 320c-48.3 0-87.8 35.7-94.6 82.1C53.9 363.6 32 312.4 32 256c0-119.1 96.9-216 216-216s216 96.9 216 216c0 56.4-21.9 107.6-57.4 146.1zM248 120c-48.6 0-88 39.4-88 88s39.4 88 88 88 88-39.4 88-88-39.4-88-88-88zm0 144c-30.9 0-56-25.1-56-56s25.1-56 56-56 56 25.1 56 56-25.1 56-56 56z" class=""></path></svg>
                                         Hi, @User.Claims.FirstOrDefault(c => c.Type == "displayname").Value
                                         </a>
                                     }
                                     else
                                     {
-                                        <a class="link" href="/profile">
+                                        <a class="link" href="/login">
                                             <i class="fa fa-user"></i>
                                             Login
                                         </a>
@@ -165,7 +176,7 @@
                             <div class="col-xl-12 col-lg-12 col-6 d-xl-block d-lg-block d-flex align-items-center">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="assets/img/logo.png" alt="logo">
+                                        <img src="/assets/img/logo.png" alt="logo">
                                     </a>
                                 </div>
                             </div>
@@ -239,7 +250,7 @@
                 <div class="col-xl-4 col-lg-5 col-md-10">
                     <div class="about-widget">
                         <a class="logo" href="index.html">
-                            <img src="assets/img/logo.png" alt="">
+                            <img src="/assets/img/logo.png" alt="">
                         </a>
                         <p>PerediOn offers you all the best online prediction from every corner of the planet with thousands of online prediction markets.</p>
                         <div class="social">
@@ -267,7 +278,7 @@
                             <ul>
                                 <li>
                                     <span class="icon">
-                                        <img src="assets/img/svg/email.svg" alt="">
+                                        <img src="/assets/img/svg/email.svg" alt="">
                                     </span>
                                     <span class="text">
                                         <span class="title">Mail Us</span>
@@ -276,7 +287,7 @@
                                 </li>
                                 <li>
                                     <span class="icon">
-                                        <img src="assets/img/svg/phone-call.svg" alt="">
+                                        <img src="/assets/img/svg/phone-call.svg" alt="">
                                     </span>
                                     <span class="text">
                                         <span class="title">Get In Touch</span>
@@ -382,23 +393,23 @@
                                 </h6>
                                 <div class="all-method">
                                     <div class="single-method">
-                                        <img src="assets/img/brand-1.png" alt="">
+                                        <img src="/assets/img/brand-1.png" alt="">
                                     </div>
                                     <div class="single-method">
-                                        <img src="assets/img/brand-2.png" alt="">
+                                        <img src="/assets/img/brand-2.png" alt="">
                                     </div>
                                     <div class="single-method">
-                                        <img src="assets/img/brand-3.png" alt="">
+                                        <img src="/assets/img/brand-3.png" alt="">
                                     </div>
                                     <div class="single-method">
-                                        <img src="assets/img/brand-4.png" alt="">
+                                        <img src="/assets/img/brand-4.png" alt="">
                                     </div>
                                     <div class="single-method">
-                                        <img src="assets/img/brand-5.png" alt="">
+                                        <img src="/assets/img/brand-5.png" alt="">
                                     </div>
 
                                     <div class="single-method">
-                                        <img src="assets/img/brand-5.png" alt="">
+                                        <img src="/assets/img/brand-5.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -439,25 +450,25 @@
     </div>
     <!-- copyright footer end -->
     <!-- jquery -->
-    <!-- <script src="assets/js/jquery.js"></script> -->
-    <script src="assets/js/jquery-3.4.1.min.js"></script>
+    <!-- <script src="/assets/js/jquery.js"></script> -->
+    <script src="/assets/js/jquery-3.4.1.min.js"></script>
     <!-- bootstrap -->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
     <!-- owl carousel -->
-    <script src="assets/js/owl.carousel.js"></script>
+    <script src="/assets/js/owl.carousel.js"></script>
     <!-- magnific popup -->
-    <script src="assets/js/jquery.magnific-popup.js"></script>
+    <script src="/assets/js/jquery.magnific-popup.js"></script>
     <!-- filterizr js -->
-    <script src="assets/js/jquery.filterizr.min.js"></script>
+    <script src="/assets/js/jquery.filterizr.min.js"></script>
     <!-- wow js-->
-    <script src="assets/js/wow.min.js"></script>
+    <script src="/assets/js/wow.min.js"></script>
     <!-- clock js -->
-    <script src="assets/js/clock.min.js"></script>
-    <script src="assets/js/jquery.appear.min.js"></script>
-    <script src="assets/js/odometer.min.js"></script>
-    <script src="assets/js/oddometer-active.js"></script>
+    <script src="/assets/js/clock.min.js"></script>
+    <script src="/assets/js/jquery.appear.min.js"></script>
+    <script src="/assets/js/odometer.min.js"></script>
+    <script src="/assets/js/oddometer-active.js"></script>
     <!-- main -->
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
