Schedule page added

--- a/euro-bet/Views/Shared/_Layout.cshtml
+++ b/euro-bet/Views/Shared/_Layout.cshtml
@@ -202,7 +202,7 @@
                                             <a class="nav-link" href="/stats">Statics</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="promotions.html">Promotions</a>
+                                            <a class="nav-link" href="/schedule">Schedule</a>
                                         </li>
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
