Add Fixture Page added

--- a/euro-bet/Views/Account/Profile.cshtml
+++ b/euro-bet/Views/Account/Profile.cshtml
@@ -18,7 +18,7 @@
                                     </div>
                                     <div class="part-name">
                                         <span class="welcome-text">Welcome</span> 
-                                        <span class="user-name-text">Mr. Suvash Shah</span> 
+                                        <span class="user-name-text">@User.Claims.FirstOrDefault(c => c.Type == "displayname").Value</span> 
                                     </div>
                                 </div>
                                 <div class="part-right">
