--- a/euro-bet/Views/Home/Index.cshtml
+++ b/euro-bet/Views/Home/Index.cshtml
@@ -149,7 +149,7 @@
     </div>
 </div>
 <!-- feature end -->
-<!-- betting begin -->
+<@* !-- betting begin -->
 <div class="betting" id="in_play">
     <div class="container">
         <div class="row justify-content-center">
@@ -1955,7 +1955,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> *@
 <!-- betting end -->
 <!-- upcoming match begin -->
 <div class="upcoming-match" id="upcoming_match">
