--- a/euro-bet/Views/Shared/_Layout.cshtml
+++ b/euro-bet/Views/Shared/_Layout.cshtml
@@ -204,19 +204,19 @@
                                         <li class="nav-item">
                                             <a class="nav-link" href="/Fixture">Fixtures</a>
                                         </li>
-                                        <li class="nav-item dropdown">
+                                        @* @* <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                 Blog
-                                            </a>
-                                            <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                                            </a> 
+                                            < div class="dropdown-menu" aria-labelledby="navbarDropdown2">
                                                 <a class="dropdown-item" href="blog.html">Blog Post</a>
                                                 <a class="dropdown-item" href="blog-details.html">Blog Details</a>
                                             </div>
-                                        </li>
-                                        <li class="nav-item dropdown">
+                                        </li>*@ 
+                                        @*  <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                 Pages
-                                            </a>
+                                            </a> 
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
                                                 <a class="dropdown-item" href="result.html">Result</a>
                                                 <a class="dropdown-item" href="latest-result.html">Latest Result</a>
@@ -227,7 +227,7 @@
                                                 <a class="dropdown-item" href="register.html">Register</a>
                                                 <a class="dropdown-item" href="error.html">Error 404</a>
                                             </div>
-                                        </li>
+                                        </li> *@
                                         <li class="nav-item">
                                             <a class="nav-link" href="contact.html">Contact US</a>
                                         </li>
